--- a/fsh/ig-data/ig.ini
+++ b/fsh/ig-data/ig.ini
@@ -2,6 +2,7 @@
 ig = input/ImplementationGuide-hl7.fhir.us.carin-bb.json
 #template = hl7.davinci.template#current
 template = fhir.base.template#current
+#template = hl7.fhir.template#current
 usage-stats-opt-out = false
 copyrightyear = 2020+
 license = CC0-1.0
