--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
         run: ./node_modules/.bin/sushi fsh
       - name: Update ig-publisher
         run: cd fsh/build && ./_updatePublisher.sh
-#      - name: Run ig-publisher
+      - name: Run ig-publisher
         run: cd fsh/build && ./_genonce.sh
       - name: Push changes
         uses: peaceiris/actions-gh-pages@v2.5.0
