--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,9 +28,9 @@ jobs:
 #        run: npm install fsh-sushi --no-save
         run: npm install fsh-sushi@0.12.7 --nosave
       - name: Run fsh-sushi
-        run: ./node_modules/.bin/sushi fsh
+        run: ./node_modules/.bin/sushi 
       - name: Update and run ig-publisher
-        run: cd ./fsh/build && ./_updatePublisher.sh && ./_genonce.sh
+        run: cd ./build && ./_updatePublisher.sh && ./_genonce.sh
 #      - name: Run ig-publisher
  #       run: cd fsh/build && ./_genonce.sh
       - name: Push changes
@@ -39,4 +39,4 @@ jobs:
           ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
           EXTERNAL_REPOSITORY: saulakravitz/carin-bb-publish
           PUBLISH_BRANCH: master
-          PUBLISH_DIR: ./fsh/build/output
+          PUBLISH_DIR: ./build/output
