--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Run fsh-sushi
         run: cd fsh;../node_modules/.bin/sushi . ; ls -l build
       - name: Update and run ig-publisher
-        run: cd build; ls -l ;./_updatePublisher.sh ; ./_genonce.sh
+        run: cd ./fsh/build; ls -l ;./_updatePublisher.sh ; ./_genonce.sh
 #      - name: Run ig-publisher
  #       run: cd fsh/build && ./_genonce.sh
       - name: Push changes
@@ -39,4 +39,4 @@ jobs:
           ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
           EXTERNAL_REPOSITORY: saulakravitz/carin-bb-publish
           PUBLISH_BRANCH: master
-          PUBLISH_DIR: ./build/output
+          PUBLISH_DIR: ./fsh/build/output
