--- a/fsh/config.yaml
+++ b/fsh/config.yaml
@@ -27,6 +27,8 @@ dependencies:
   hl7.fhir.us.core: 3.1.0
 parameters:
   show-inherited-invariants: false
+  apply-jurisdiction: true
+  apply-publisher: true
 copyrightYear: 2020+
 releaseLabel: STU1
 jurisdiction: urn:iso:std:iso:3166#US
