--- a/fsh/config.yaml
+++ b/fsh/config.yaml
@@ -36,52 +36,52 @@ jurisdiction: urn:iso:std:iso:3166#US
 # ╭─────────────────────────────────────────────ig.ini─────────────────────────────────────────────╮
 # │  To control the ig.ini using this config, uncomment and set the "template" property.           │
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
-# template: hl7.fhir.template#current
+template: hl7.fhir.template#current
 
 # ╭────────────────────────────────────────────menu.xml────────────────────────────────────────────╮
 # │  To control the menu.xml using this config, uncomment and set the "menu" property.             │
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
-# menu:
-#   Home: index.html
-#   "HOME ":
-#     Introduction: index.html#Introduction
-#     The CARIN Alliance: index.html#Introduction#the-carin-alliance
-#     Guide Overview: index.html#guide-overview
-#   Use Cases:
-#     Terms and Concepts: use_case.html
-#     Use Cases: use_case.html
-#   Guidance:
-#     General Guidance: index.html#Introduction
-#     Common Payer Consumer Data Set (CPCDS): cpcds.html
-#     Notes To Developers: index.html#CARIN
-#   FHIR Artifacts:
-#     Profiles: profiles.html
-#     Search Parameters: searchParameters.html
-#     "Terminology ": terminology.html
-#     Capability Statements: capability.html
-#   Security: index.html#CARIN
-#   Examples: examples.html
-#   Downloads: downloads.html
+menu:
+  Home: index.html
+  "HOME ":
+    Introduction: index.html#Introduction
+    The CARIN Alliance: index.html#Introduction#the-carin-alliance
+    Guide Overview: index.html#guide-overview
+  Use Cases:
+    Terms and Concepts: use_case.html
+    Use Cases: use_case.html
+  Guidance:
+    General Guidance: index.html#Introduction
+    Common Payer Consumer Data Set (CPCDS): cpcds.html
+    Notes To Developers: index.html#CARIN
+  FHIR Artifacts:
+    Profiles: profiles.html
+    Search Parameters: searchParameters.html
+    "Terminology ": terminology.html
+    Capability Statements: capability.html
+  Security: index.html#CARIN
+  Examples: examples.html
+  Downloads: downloads.html
 
 # ╭───────────────────────────────────────package-list.json────────────────────────────────────────╮
 # │  To control the package-list.json using this config, uncomment and set the "history" property. │
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
-# history:
-#   title: CARIN Blue Button Implementation Guide
-#   introduction: This implementation guide describes the CARIN Blue Button®
-#     Framework and Common Payer Consumer Data Set (CPCDS), providing a set of
-#     resources that payers can display to consumers via a FHIR API.
-#   current:
-#     version: current
-#     desc: CARIN Blue Button Implementation Guide CI Build
-#     path: http://build.fhir.org/ig/HL7/carin-bb
-#     status: ci-build
-#     current: true
-#   0.1.0:
-#     desc: CARIN Blue Button FHIR IG STU1 ballot
-#     date: 2019-12-22
-#     sequence: STU1
-#     path: http://hl7.org/fhir/us/carin-bb/2020Feb
-#     status: ballot
-#     fhirversion: 4.0.1
-#     current: false
+history:
+  title: CARIN Blue Button Implementation Guide
+  introduction: This implementation guide describes the CARIN Blue Button®
+    Framework and Common Payer Consumer Data Set (CPCDS), providing a set of
+    resources that payers can display to consumers via a FHIR API.
+  current:
+    version: current
+    desc: CARIN Blue Button Implementation Guide CI Build
+    path: http://build.fhir.org/ig/HL7/carin-bb
+    status: ci-build
+    current: true
+  0.1.0:
+    desc: CARIN Blue Button FHIR IG STU1 ballot
+    date: 2019-12-22
+    sequence: STU1
+    path: http://hl7.org/fhir/us/carin-bb/2020Feb
+    status: ballot
+    fhirversion: 4.0.1
+    current: false
