--- a/fsh/config.yaml
+++ b/fsh/config.yaml
@@ -44,23 +44,24 @@ template: hl7.fhir.template#current
 menu:
   Home: index.html
   "HOME ":
-    Introduction: index.html#Introduction
-    The CARIN Alliance: index.html#Introduction#the-carin-alliance
-    Guide Overview: index.html#guide-overview
+    The CARIN Alliance: Background.html#the-carin-alliance
+    Guide Overview: Background.html#guide-overview
   Use Cases:
-    Terms and Concepts: use_case.html
-    Use Cases: use_case.html
+    Terms and Concepts: Use_Case.html#terms-and-concepts
+    Use Cases: Use_Case.html#use-cases
   Guidance:
-    General Guidance: index.html#Introduction
-    Common Payer Consumer Data Set (CPCDS): cpcds.html
-    Notes To Developers: index.html#CARIN
+    General Guidance: Guidance.html
+    Common Payer Consumer Data Set (CPCDS): Common_Payer_Consumer_Data_Set.html
+    Notes To Developers: Notes_To_Developers.html
   FHIR Artifacts:
     Profiles: profiles.html
-    Search Parameters: searchParameters.html
-    "Terminology ": terminology.html
-    Capability Statements: capability.html
-  Security: index.html#CARIN
-  Examples: examples.html
+    Search Parameters: search.html
+    Terminology: Terminology.html
+    Capability Statements: Capability.html
+  Security:
+    SMART on FHIR Application Launch: Authorization_Authentication_and_Registration.html#smart-on-fhir-application-launch
+    Authorization and Authentication: https://build.fhir.org/ig/HL7/carin-bb/Authorization_Authentication_and_Registration.html#authorization-and-authentication
+  Examples: Examples.html
   Downloads: downloads.html
 
 # ╭───────────────────────────────────────package-list.json────────────────────────────────────────╮
