last changes before release

--- a/fsh/config.yaml
+++ b/fsh/config.yaml
@@ -43,7 +43,7 @@ template: hl7.fhir.template#current
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
 menu:
   Home: index.html
-  "HOME ":
+  Background:
     The CARIN Alliance: Background.html#the-carin-alliance
     Guide Overview: Background.html#guide-overview
   Use Cases:
