--- a/fsh/config.yaml
+++ b/fsh/config.yaml
@@ -57,7 +57,7 @@ menu:
     Profiles: profiles.html
     Search Parameters: search.html
     Terminology: Terminology.html
-    Capability Statements: Capability.html
+    Capability Statement: CapabilityStatement-carin-bb.html
   Security:
     SMART on FHIR Application Launch: Authorization_Authentication_and_Registration.html#smart-on-fhir-application-launch
     Authorization and Authentication: https://build.fhir.org/ig/HL7/carin-bb/Authorization_Authentication_and_Registration.html#authorization-and-authentication
