--- a/fsh/config.yaml
+++ b/fsh/config.yaml
@@ -61,7 +61,7 @@ menu:
   Security:
     SMART on FHIR Application Launch: Authorization_Authentication_and_Registration.html#smart-on-fhir-application-launch
     Authorization and Authentication: https://build.fhir.org/ig/HL7/carin-bb/Authorization_Authentication_and_Registration.html#authorization-and-authentication
-  Examples: Examples.html
+  Examples: examples.html
   Downloads: downloads.html
 
 # ╭───────────────────────────────────────package-list.json────────────────────────────────────────╮
