--- a/fsh/config.yaml
+++ b/fsh/config.yaml
@@ -60,7 +60,7 @@ menu:
     Capability Statement: CapabilityStatement-c4bb.html
   Security:
     SMART on FHIR Application Launch: Authorization_Authentication_and_Registration.html#smart-on-fhir-application-launch
-    Authorization and Authentication: https://build.fhir.org/ig/HL7/carin-bb/Authorization_Authentication_and_Registration.html#authorization-and-authentication
+    Authorization and Authentication: Authorization_Authentication_and_Registration.html#authorization-and-authentication
   Examples:  artifacts.html#7
   Downloads: downloads.html
 
