changes from Pat

--- a/fsh/config.yaml
+++ b/fsh/config.yaml
@@ -45,7 +45,8 @@ menu:
   Home: index.html
   Background:
     The CARIN Alliance: Background.html#the-carin-alliance
-    Guide Overview: Background.html#guide-overview
+    Patient Protection: Background.html#patient-protection
+    Relation to Other IGs: Background.html#relation-to-other-IGs
   Use Cases:
     Terms and Concepts: Use_Case.html#terms-and-concepts
     Use Cases: Use_Case.html#use-cases
