--- a/fsh/config.yaml
+++ b/fsh/config.yaml
@@ -12,19 +12,19 @@
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
 id: hl7.fhir.us.carin-bb
 canonical: http://hl7.org/fhir/us/carin-bb
-version: 0.1.2
+version: 0.1.4
 name: CARINConsumerDirectedPayerDataExchange
-title: CARIN Consumer Directed Payer Data Exchange
+title: CARIN Consumer Directed Payer Data Exchange (CARIN IG for Blue Button®)
 status: active
 publisher:
   name: HL7 Financial Management Working Group
   url: http://www.hl7.org/Special/committees/fm/index.cfm
   email: fm@lists.HL7.org
-description: CARIN Consumer Directed Payer Data Exchange
+description: CARIN Consumer Directed Payer Data Exchange (CARIN IG for Blue Button®)
 license: CC0-1.0
 fhirVersion: 4.0.1
 dependencies:
-  hl7.fhir.us.core: 3.1.0
+  hl7.fhir.us.core: 3.1.1   # updated from 3.1.0 on 9/23/20
 parameters:
   show-inherited-invariants: false
   apply-jurisdiction: true
@@ -45,7 +45,8 @@ menu:
   Home: index.html
   Background:
     The CARIN Alliance: Background.html#the-carin-alliance
-    Guide Overview: Background.html#guide-overview
+    Patient Protection: Background.html#patient-protection
+    Relation to Other IGs: Background.html#relation-to-other-IGs
   Use Cases:
     Terms and Concepts: Use_Case.html#terms-and-concepts
     Use Cases: Use_Case.html#use-cases
@@ -54,14 +55,14 @@ menu:
     Common Payer Consumer Data Set (CPCDS): Common_Payer_Consumer_Data_Set.html
     Notes To Developers: Notes_To_Developers.html
   FHIR Artifacts:
-    Profiles: profiles.html
-    Search Parameters: search.html
-    Terminology: Terminology.html
-    Capability Statements: Capability.html
+    Profiles: artifacts.html#3
+    Search Parameters: artifacts.html#2
+    Terminology: Terminology.html 
+    Capability Statement: CapabilityStatement-c4bb.html
   Security:
     SMART on FHIR Application Launch: Authorization_Authentication_and_Registration.html#smart-on-fhir-application-launch
-    Authorization and Authentication: https://build.fhir.org/ig/HL7/carin-bb/Authorization_Authentication_and_Registration.html#authorization-and-authentication
-  Examples: Examples.html
+    Authorization and Authentication: Authorization_Authentication_and_Registration.html#authorization-and-authentication
+  Examples:  artifacts.html#7
   Downloads: downloads.html
 
 # ╭───────────────────────────────────────package-list.json────────────────────────────────────────╮
