--- a/fsh/config.yaml
+++ b/fsh/config.yaml
@@ -37,6 +37,7 @@ jurisdiction: urn:iso:std:iso:3166#US
 # │  To control the ig.ini using this config, uncomment and set the "template" property.           │
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
 template: hl7.fhir.template#current
+# template: hl7.davinci.template#current
 
 # ╭────────────────────────────────────────────menu.xml────────────────────────────────────────────╮
 # │  To control the menu.xml using this config, uncomment and set the "menu" property.             │
@@ -53,10 +54,11 @@ menu:
   Guidance:
     General Guidance: Guidance.html
     Common Payer Consumer Data Set (CPCDS): Common_Payer_Consumer_Data_Set.html
+    Terminology: Terminology.html 
   FHIR Artifacts:
     Profiles: artifacts.html#3
-    Search Parameters: artifacts.html#2
-    Terminology: Terminology.html 
+    Search Parameters: searchparameters.html
+    Terminology: artifacts.html#5
     Capability Statement: CapabilityStatement-c4bb.html
   Security:
     SMART on FHIR Application Launch: Authorization_Authentication_and_Registration.html#smart-on-fhir-application-launch
