--- a/fsh/config.yaml
+++ b/fsh/config.yaml
@@ -88,3 +88,69 @@ history:
     status: ballot
     fhirversion: 4.0.1
     current: false
+
+resources:
+  Coverage/CoverageEx1:
+    name: Coverage Example 1
+    description: Coverage Example 1
+    exampleCanonical: http://hl7.org/fhir/us/carin-bb/StructureDefinition/C4BB-Coverage
+  Coverage/CoverageEx2:
+    name: Coverage Example 2
+    description: Coverage Example 2
+    exampleCanonical: http://hl7.org/fhir/us/carin-bb/StructureDefinition/C4BB-Coverage
+  ExplanationOfBenefit/EOBInpatientInstitutionalEx1:
+    name: EOB Inpatient Institutional - Example 1
+    description: EOB Inpatient Institutional - Example 1
+    exampleCanonical: http://hl7.org/fhir/us/carin-bb/StructureDefinition/C4BB-ExplanationOfBenefit-Inpatient-Institutional
+  ExplanationOfBenefit/EOBOupatientInstitutionalEx1:
+    name: EOB Outpatient Institutional - Example 1
+    description: EOB Outpatient Institutional - Example 1
+    exampleCanonical: http://hl7.org/fhir/us/carin-bb/StructureDefinition/C4BB-ExplanationOfBenefit-Outpatient-Institutional
+  ExplanationOfBenefit/EOBProfessionalEx1:
+    name: EOB Professional - Example 1
+    description: EOB Professional - Example 1
+    exampleCanonical: http://hl7.org/fhir/us/carin-bb/StructureDefinition/C4BB-ExplanationOfBenefit-Professional-NonClinician
+  Organization/PayerOrgEx1:
+    name: Payer Organization Example 1
+    description: Payer Organization Example 1
+    exampleCanonical: http://hl7.org/fhir/us/carin-bb/StructureDefinition/C4BB-Organization
+  Organization/ProviderOrganizationEx1:
+    name: Provider Organizaiton Example 1
+    description: Provider Organizaiton Example 1
+    exampleCanonical: http://hl7.org/fhir/us/carin-bb/StructureDefinition/C4BB-Organization
+  Organization/ProviderOrganizationEx2:
+    name: Provider Organizaiton Example 2
+    description: Provider Organizaiton Example 2
+    exampleCanonical: http://hl7.org/fhir/us/carin-bb/StructureDefinition/C4BB-Organization
+  Organization/ProviderOrganizationEx3:
+    name: Provider Organizaiton Example 3
+    description: Provider Organizaiton Example 3
+    exampleCanonical: http://hl7.org/fhir/us/carin-bb/StructureDefinition/C4BB-Organization
+  Organization/ProviderOrganizationEx4:
+    name: Provider Organizaiton Example 4
+    description: Provider Organizaiton Example 4
+    exampleCanonical: http://hl7.org/fhir/us/carin-bb/StructureDefinition/C4BB-Organization
+  Organization/ProviderOrganizationEx5:
+    name: Provider Organizaiton Example 5
+    description: Provider Organizaiton Example 5
+    exampleCanonical: http://hl7.org/fhir/us/carin-bb/StructureDefinition/C4BB-Organization
+  Organization/ProviderOrganizationEx6:
+    name: Provider Organizaiton Example 6
+    description: Provider Organizaiton Example 6
+    exampleCanonical: http://hl7.org/fhir/us/carin-bb/StructureDefinition/C4BB-Organization
+  Patient/PatientEx1:
+    name: Patient Example 1
+    description: Patient Example 1
+    exampleCanonical: http://hl7.org/fhir/us/carin-bb/StructureDefinition/C4BB-Patient
+  Practitioner/PractitionerEx1:
+    name: Practitioner Example 1
+    description: Practitioner Example 1
+    exampleCanonical: http://hl7.org/fhir/us/carin-bb/StructureDefinition/C4BB-Practitioner
+  Practitioner/PractitionerEx2:
+    name: Practitioner Example 2
+    description: Practitioner Example 2
+    exampleCanonical: http://hl7.org/fhir/us/carin-bb/StructureDefinition/C4BB-Practitioner
+  Practitioner/PractitionerEx3:
+    name: Practitioner Example 3
+    description: Practitioner Example 3
+    exampleCanonical: http://hl7.org/fhir/us/carin-bb/StructureDefinition/C4BB-Practitioner
