--- a/fsh/config.yaml
+++ b/fsh/config.yaml
@@ -63,7 +63,7 @@ menu:
   Security:
     SMART on FHIR Application Launch: Authorization_Authentication_and_Registration.html#smart-on-fhir-application-launch
     Authorization and Authentication: Authorization_Authentication_and_Registration.html#authorization-and-authentication
-  Examples:  Examples.html
+  Examples:  artifacts.html#7
   Downloads: downloads.html
 
 # ╭───────────────────────────────────────package-list.json────────────────────────────────────────╮
