--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -12,7 +12,7 @@
 # ╰────────────────────────────────────────────────────────────────────────────────────────────────╯
 id: hl7.fhir.us.carin-bb
 canonical: http://hl7.org/fhir/us/carin-bb
-version: 1.1.0
+version: 1.2.0
 name: CARINConsumerDirectedPayerDataExchange
 title: CARIN Consumer Directed Payer Data Exchange (CARIN IG for Blue Button®)
 status: active
@@ -29,7 +29,7 @@ parameters:
   show-inherited-invariants: false
   apply-jurisdiction: true
   apply-publisher: true
-copyrightYear: 2020+
+copyrightYear: 2021+
 releaseLabel: CI - STU2 Draft
 jurisdiction: urn:iso:std:iso:3166#US
 
@@ -55,12 +55,11 @@ menu:
     Terminology: artifacts.html#5
     Capability Statement: CapabilityStatement-c4bb.html
   Security:
-    SMART on FHIR Application Launch: 7_Authorization_Authentication_and_Registration.html#smart-on-fhir-application-launch
-    Authorization and Authentication: 7_Authorization_Authentication_and_Registration.html#authorization-and-authentication
+    General Considerations: 7_Authorization_Authentication_and_Registration.html#general-considerations
+    Security Requirements: 7_Authorization_Authentication_and_Registration.html#security-requirements
   Examples:  artifacts.html#7
   Downloads: 8_downloads.html
   Change Notes: change_notes.html
-
 
 
 pages:
