--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -32,7 +32,7 @@ parameters:
   excludettl: 'true'
   excludemap: 'true'
 copyrightYear: 2021+
-releaseLabel: CI - STU2 Draft
+releaseLabel: STU 2 Ballot
 jurisdiction: urn:iso:std:iso:3166#US
 
 # ╭────────────────────────────────────────────menu.xml────────────────────────────────────────────╮
