FHIR-38285 for post THO 3.1.0 publication

--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -34,6 +34,10 @@ parameters:
   apply-publisher: true
   excludettl: 'true'
   excludemap: 'true'
+  special-url:
+    - https://x12.org/codesystem.x12.org/5010/1317
+    - https://www.nubc.org/CodeSystem/PresentOnAdmissionIndicator
+
 copyrightYear: 2022+
 releaseLabel: STU 2
 jurisdiction: urn:iso:std:iso:3166#US
