--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -55,8 +55,9 @@ menu:
     Terms and Concepts: Use_Case.html#terms-and-concepts
     Use Cases: Use_Case.html#use-cases
   Guidance:
-    General Guidance: General_Guidance.html
+    Conformance Requirements: Conformance_Requirements.html
     Common Payer Consumer Data Set (CPCDS): Common_Payer_Consumer_Data_Set.html
+    General Guidance: Conformance_Requirements.html
     Terminology Licensure: Terminology.html
   FHIR Artifacts:
     Profiles: artifacts.html#3
@@ -78,6 +79,8 @@ pages:
     title: Background
   Use_Case.md:
     title: Use Case
+  Conformance_Requirements.md:
+    title: Conformance Requirements
   General_Guidance.md:
     title: General Guidance
   Common_Payer_Consumer_Data_Set.md:
